# BugSquashGame

./: CMakeLists.txt  GameApp.cpp  GameApp.h  README.md  main.cpp  pch.h
GameLib/: BugCollection.cpp  BugCollection.h  CMakeLists.txt  CodeWindow.cpp  CodeWindow.h  DoublePointsBug.cpp  DoublePointsBug.h  FatBug.cpp  FatBug.h  Feature.cpp  Feature.h  Game.cpp  Game.h  GameView.cpp  GameView.h  GarbageBug.cpp  GarbageBug.h  Item.cpp  Item.h  Laptop.cpp  Laptop.h  Leaderboard.cpp  Leaderboard.h  Level.cpp  Level.h  MainFrame.cpp  MainFrame.h  NullBug.cpp  NullBug.h  Player.cpp  Player.h  PlayingArea.cpp  PlayingArea.h  RedundancyFly.cpp  RedundancyFly.h  ScoreBoard.cpp  ScoreBoard.h  ids.h  pch.h
Tests/: CMakeLists.txt  FatBugTest.cpp  FeatureBugTest.cpp  GameTest.cpp  GarbageBugTest.cpp  ItemTest.cpp  NullBugTest.cpp  RedundancyTest.cpp
levels/: level0.xml  level1.xml  level3.xml
